codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

› 1. gpt-5.1-codex-max (default)  Flagship model optimized for deep and fast
                                  reasoning.
  2. gpt-5.1-codex-mini           Optimized for codex. Cheaper, faster, but
                                  less capable.
  3. gpt-5.2                      Latest frontier model with improvements
                                  across knowledge, reasoning and coding

  Press enter to select reasoning effort, or esc to dismiss.
